--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,10 +1,8 @@
 {
 	"lock": false,
 	"name": "@li/deno-lint-stateful-regexp",
-	"version": "0.0.0",
-	"exports": {
-		".": "./src/mod.ts"
-	},
+	"version": "0.0.1",
+	"exports": "./src/mod.ts",
 	"tasks": {
 		"test": "deno test -R"
 	},
